cluster/apps/monitoring/uptime-kuma/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: http-kuma
              protocol: TCP
          resources:
            limits:
              cpu: "0.1"
          volumeMounts:
            - name: kuma-data
              readOnly: false
              mountPath: /app/data
      volumes:
        - name: kuma-data
          persistentVolumeClaim:
            claimName: kuma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  selector:
    app: uptime-kuma
  type: LoadBalancer
  ports:
    - port: 3001
      protocol: TCP
      targetPort: http-kuma
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: monitoring 
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - uptime.kuma 
      secretName: uptime.kuma
  rules:
    - host: uptime.kuma
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
